kubernetes/apps/paperless/gotenberg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
  namespace: paperless
spec:
  selector:
    app: gotenberg
  ports:
    - port: 3000
